# Coleta-Preco-Acoes

./: Dockerfile  README.md  app.py  pyproject.toml  testes.ipynb
.streamlit/: config.toml
