[tool.poetry]
name = "coleta-preco-acoes"
version = "0.1.0"
description = ""
authors = ["Renan Marx"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
pandas = "^2.2.2"
numpy = "^2.1.0"
seaborn = "^0.13.2"
plotly = "^5.23.0"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
datetime = "^5.5"
python-dateutil = "^2.9.0.post0"
pandas-datareader = "^0.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
